[tool.poetry]
name = "mimamu"
version = "0.1.0"
description = "Guess-the-prompt Visual Game"
authors = ["Itamar Shefi <itamarshefi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
omegaconf = "^2.3.0"
pymongo = "^4.6.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
types-requests = "^2.31.0.20240311"
pillow = "^10.2.0"
mongomock = "^4.1.2"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
types-beautifulsoup4 = "^4.12.0.20240229"
types-pillow = "^10.2.0.20240311"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[tool.coverage.run]
omit = [
    "scripts/*",
]
branch = true

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
