[tool.poetry]
name = "mimamu"
version = "0.1.0"
description = "Guess-the-prompt Visual Game"
authors = ["Itamar Shefi <itamarshefi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
omegaconf = "^2.3.0"
pymongo = "^4.6.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
types-requests = "^2.31.0.20240311"
pillow = "^10.2.0"
mypy = "^1.9.0"
types-beautifulsoup4 = "^4.12.0.20240229"
types-pillow = "^10.2.0.20240311"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
mongomock = {git = "https://github.com/mongomock/mongomock.git", rev = "ff5186f"}
freezegun = "^1.4.0"
ruff = "^0.3.4"

[tool.coverage.run]
omit = [
    "scripts/*",
    "mocks.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true

[tool.ruff]
lint.select = [
  "E", # pycodestyle 
  "F", # flake8
  "I", # isort
]
lint.isort.force-single-line = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
